Updated with version: 3.9.0 changes

--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -214,7 +214,7 @@
     "description":"abp: link subscriber result"
   },
   "optionsversion":{
-    "message":"Έκδοση $version$",
+    "message":"ΕΚΔΟΣΗ $version$",
     "description":"Version number",
     "placeholders":{
       "version":{
@@ -1192,15 +1192,15 @@
     "description":"Text of a donate link in the toolbar button menu"
   },
   "pwyw":{
-    "message":"Πληρώστε ό,τι θέλετε!",
+    "message":"ΠΛΗΡΩΣΤΕ ΟΤΙ ΘΕΛΕΤΕ!",
     "description":"Text of a payment request link"
   },
   "privacy_policy":{
-    "message":"Πολιτική απορρήτου",
+    "message":"ΠΟΛΙΤΙΚΗ ΑΠΟΡΡΗΤΟΥ",
     "description":"Link to AdBlock's privacy policy"
   },
   "translator_credit":{
-    "message":"Εύσημα για την μετάφραση δίνονται σε:",
+    "message":"Εύσημα για την μετάφραση δίνονται στους:",
     "description":"Will be followed by a list of translator names (separate string)"
   },
   "tabsupport":{
@@ -1216,7 +1216,7 @@
     "description":"option on the 'General' tab"
   },
   "advanced_options2":{
-    "message":"Είμαι προχωρημένος χρήστης, δείξε μου προηγμένες επιλογές",
+    "message":"Είμαι ένας έμπειρος χρήστης, δείξε μου επιλογές για προχωρημένους",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "work_around_hulu_problems":{
