--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -1619,6 +1619,10 @@
     "message":"Elfelejtett pillanatképet mellékelni! Nem segíthetünk anélkül, hogy látnánk a jelentett hirdetés(eke)t.",
     "description":"Error message shown when the user doesn't attach a screenshot to an ad report."
   },
+  "adreport_response_success":{
+    "message":"Minden kész! Felvesszük a kapcsolatot, amint tudjuk. Addig is, keressen egy az AdBlock-tól kapott email-t. Benne megtalálja az ügyfélszolgálati oldalunkon található jegyének linkjét, továbbá néhány önsegítő javaslatot, amennyiben nem érjük el azonnal.",
+    "description":"Shown when a ticket has been sumbitted to AdBlock's support site successfully."
+  },
   "adreport_response_invalid_file":{
     "message":"Ez nem egy képfájl. Kérjük .png, .gif vagy .jpg fájt töltsön fel.",
     "description":"Error message shown when the user uploads an invalid file type."
