--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -64,7 +64,7 @@
     "description":"Blacklister slider page title"
   },
   "blacklisteroptions1":{
-    "message":"Welke kenmerken gelden er elke keer als je deze pagina bezoekt?",
+    "message":"Welke kenmerken van deze advertentie gelden er elke keer als je deze pagina bezoekt?",
     "description":"Blacklister attribute choosing page message"
   },
   "blacklisternotsure":{
@@ -188,7 +188,7 @@
     "description":"Checkbox on whitelist wizard"
   },
   "wizardcantrunonframesets":{
-    "message":"Deze AdBlock functie werkt niet op deze website omdat deze verouderde technologie gebruikt. Je kan items op deze website manueel blokkeren of uitsluiten in het 'Personaliseren' menu van de opties pagina.",
+    "message":"Deze AdBlock functie werkt niet op deze website omdat deze verouderde technologie gebruikt. Je kan items op deze website handmatig blokkeren of toestaan in het 'Personaliseren' menu op de opties pagina.",
     "description":"Message (alert) shown when the user tries to use a blacklist\/whitelist wizard on an old website"
   },
   "subscribeconfirm":{
@@ -252,7 +252,7 @@
     "description":"Checkbox on the 'General' tab of the Options page. Allow AdBlock and the ClickToFlash Safari extension to work simultaneously on YouTube."
   },
   "safaricontentblocking":{
-    "message":"Schakel Safari Content Blocking in",
+    "message":"Schakel Safari Materiaalblokkering in",
     "description":"Checkbox on the 'General' tab of the Options page. 'Content Blocking' is the name of a different way of blocking resources introduced in Safari 9."
   },
   "debuginlogoption":{
@@ -344,7 +344,7 @@
     "description":"message on the filter tab"
   },
   "invalidListUrl":{
-    "message":"Ongeldige URL naar de filter. Deze filter zal verwijdert worden",
+    "message":"Ongeldige URL naar de filter. Deze filter zal verwijderd worden.",
     "description":"Message when you subscribe to a non-list URL"
   },
   "failedtofetchfilter":{
@@ -356,7 +356,7 @@
     "description":"Label to remove a custom filter"
   },
   "you_know_thats_a_bad_idea_right":{
-    "message":"Hoe meer lijsten je gebruikt, hoe langzamer AdBlock wordt. Teveel lijsten kunnen zelfs je browser laten crashen. Klik op OK om je toch aan te melden voor deze lijst.",
+    "message":"Hoe meer filters je gebruikt, hoe langzamer AdBlock wordt. Teveel filters kunnen zelfs je browser laten crashen. Klik op OK om je toch aan te melden voor deze filter.",
     "description":"Confirmation message shown to user if they try to subscribe to too many lists. The user will have two options: OK and Cancel."
   },
   "filterstabtitle":{
@@ -528,7 +528,7 @@
     "description":"Button to delete error messages when adding custom filters manually"
   },
   "contentblockingwarning":{
-    "message":"Opmerking: Het whitelisten (toelaten van advertenties) op een pagina of website is niet ondersteund met Safari Inhoud Blokkering geactiveerd.",
+    "message":"Opmerking: Het whitelisten (toelaten van advertenties) op een pagina of website wordt niet ondersteund met Safari materiaalblokkering geactiveerd.",
     "description":"Notice shown on the 'Customize' tab of the options page when Safari Content Blocking is enabled"
   },
   "savebutton":{
@@ -924,7 +924,7 @@
     "description":"Used for placeholder in checkinfirefox_2 string"
   },
   "nodefaultfilter1":{
-    "message":"We hebben geen filter lijst voor deze taal.<br\/>Probeer $link$ een geschikte lijst te zoeken of blokkeer deze advertentie zelf in de opties van AdBlock.",
+    "message":"We hebben geen standaard filters voor deze taal.<br\/>Probeer $link$ een geschikte lijst te zoeken of blokkeer deze advertentie zelf via de opties van AdBlock.",
     "description":"Instructions on ad report page pointing users to EasyList subscriptions list. 'Customize' should be the same text as the name of the 'Customize' tab.",
     "placeholders":{
       "link":{
@@ -934,7 +934,7 @@
     }
   },
   "retryaftersubscribe":{
-    "message":"Meld je aan voor de volgende lijst en probeer het opnieuw: $list_title$",
+    "message":"Meld je aan voor de deze filter en probeer het opnieuw: $list_title$",
     "description":"Instructions on ad report page telling users to subscribe to a filter list and then check again to see whether the ad exists",
     "placeholders":{
       "list_title":{
@@ -1024,7 +1024,7 @@
     }
   },
   "fixityourself":{
-    "message":"OK, je kunt deze advertentie steeds voor jezelf blokkeren. Bedankt!",
+    "message":"OK, je kan deze advertentie nog steeds voor jezelf blokkeren. Bedankt!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
   "adblock_outdated_chrome":{
@@ -1100,7 +1100,7 @@
     "description":"Generic message for buttons that close a view or window"
   },
   "loading":{
-    "message":"LADEN...",
+    "message":"Laden...",
     "description":"Generic message displayed during processes that take some time"
   },
   "flashads":{
@@ -1108,7 +1108,7 @@
     "description":"Title of the final ad report question if the ad didn't appear in Firefox"
   },
   "cantblockflashwarning":{
-    "message":"Verschijnt de advertentie in of voor een film of andere plugin zoals een Flash spel?",
+    "message":"Verschijnt de advertentie in of voor een film of andere plugin zoals een Flash game?",
     "description":"Text of the final ad report question"
   },
   "cantblockflash":{
@@ -1116,11 +1116,11 @@
     "description":"Result of the final ad report question"
   },
   "cleanuplist2":{
-    "message":"Ruim deze filter op",
+    "message":"Schoon deze lijst op",
     "description":"Option at the bottom of the 'Customize' options tab"
   },
   "disabled_by_filter_lists":{
-    "message":"Sorry, AdBlock is op deze site uitgeschakeld door een van uw filter lijsten.",
+    "message":"Sorry, AdBlock is op deze site uitgeschakeld door een van jouw filters.",
     "description":"Message shown when a user tries to unwhitelist a web page that has been whitelisted by a rule in a subscribed filter list"
   },
   "dont_run_on_pages_on_domain":{
@@ -1128,11 +1128,11 @@
     "description":"Menu entry to open the whitelist wizard"
   },
   "disabled_on_this_page":{
-    "message":"Deze pagina is uitgesloten van het blokkeren van advertenties.",
+    "message":"AdBlock is uitgeschakeld voor deze pagina.",
     "description":"Message shown in toolbar button on web pages that have been whitelisted"
   },
   "enable_adblock":{
-    "message":"Activeer AdBlock op deze pagina",
+    "message":"Activeer AdBlock voor deze pagina",
     "description":"Link text to un-whitelist a page, displayed immediately after 'AdBlock is disabled on this page'"
   },
   "status_paused":{
@@ -1148,19 +1148,19 @@
     "description":"Menu entry to pause AdBlock"
   },
   "safaricontentblockingpausemessage":{
-    "message":"Om AdBlock te pauzeren met de Inhoud Blokkering geactiveerd, selecteer Safari (in de menubalk) > Voorkeuren > Extensies > AdBlock en schakel 'Schakel AdBlock in' uit.",
+    "message":"Om AdBlock te pauzeren met de materiaalblokkering geactiveerd, selecteer Safari (in de menubalk) > Voorkeuren > Extensies > AdBlock en schakel 'Schakel AdBlock in' uit.",
     "description":"Alert displayed after clicking 'Pause AdBlock' in the AdBlock menu while Safari Content blocking is enabled"
   },
   "safaricontentblockinglimitexceeded":{
-    "message":"De lijst met filter regels overschrijft de limiet van 50 000 en is automatisch verkleind. Meld je aub af voor enkele filters of schakel de Safari Inhoud Blokkering uit!",
+    "message":"De lijst met filter regels overschrijft de limiet van 50 000 en is automatisch verkleind. Meld je aub af voor enkele filters of schakel de Safari materiaalblokkering uit!",
     "description":"Displayed when the number of rules in the subscribed filter lists is larger than the number supported by Safari Content Blocking, if that option is enabled"
   },
   "browserestartrequired":{
-    "message":"Herstart Safari aub om content blocking volledig uit te schakelen.",
+    "message":"Herstart Safari aub om materiaalblokkering volledig uit te schakelen.",
     "description":"Displayed after disabling Safari Content Blocking, which requres a browser relaunch"
   },
   "safarinotificationtitle":{
-    "message":"Inhoud blokkering regels limiet overschreden",
+    "message":"Materiaalblokkering regels limiet overschreden",
     "description":"Title of a notification shown to Safari Content Blocking users with too many filter list rules"
   },
   "safarinotificationbody":{
@@ -1342,7 +1342,7 @@
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_all_youtube_channels":{
-    "message":"Sluit alle kanalen van YouTube uit waarop u geabonneerd bent",
+    "message":"Sluit alle kanalen van YouTube uit waarop ik geabonneerd bent",
     "description":"Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled"
   },
   "one_moment_all_youtube_channels":{
@@ -1479,6 +1479,14 @@
     "message":"Toon alle verzoeken",
     "description":"Menu entry to open the resource list page"
   },
+  "new_resourcelist_explanation_win":{
+    "message":"Om alle aanvragen te tonen: klik met de rechtermuisknop op de pagina, selecteer 'Inspecteren' (Ctrl + Shift + I) en selecteer dan het tabblad 'AdBlock'.",
+    "description":"Message explaining how to access the resource list page on AdBlock 3.0+"
+  },
+  "new_resourcelist_explanation_osx":{
+    "message":"Om alle aanvragen te tonen: klik met de rechtermuisknop op de pagina, selecteer 'Inspecteren' (Option+Cmd+I) en selecteer dan het tabblad 'AdBlock'.",
+    "description":"Message explaining how to access the resource list page on AdBlock 3.0+"
+  },
   "noresourcessend2":{
     "message":"Er is iets fout gegaan. De geladen items zijn niet doorgestuurd. Deze pagina zal nu sluiten. Probeer de website opnieuw te laden.",
     "description":"Resource list page: error message"
@@ -1560,15 +1568,15 @@
     "description":"Message shown to users after disabling Acceptable Ads via update page."
   },
   "acceptableadsdisable_how_to_reenable":{
-    "message":"Je kan dit terug activeren en de websites waar je van houdt ondersteunen door het selectievakje 'Laat sommige, niet-opdringerige advertenties toe' weer in te schakelen.",
+    "message":"Je kan dit weer activeren en de websites die je vaak bezoekt ondersteunen door het selectievakje 'Laat sommige, niet-opdringerige advertenties toe' weer aan te vinken.",
     "description":"Message shown to users after disabling Acceptable Ads via update page."
   },
   "acceptable_ads_content_blocking_disbled_message":{
-    "message":"We hebben je afgemeld van de aanvaardbare advertenties omdat u safari content blocking hebt ingeschakeld. Je kan slechts 1 van deze 2 opties tegelijk selecteren. (<a>Waarom?<\/a>)",
+    "message":"We hebben je afgemeld van de aanvaardbare advertenties omdat u safari materiaalblokkering hebt ingeschakeld. Je kan slechts 1 van deze 2 opties tegelijk selecteren. (<a>Waarom?<\/a>)",
     "description":"Warning shown when Safari Content Blocking is enabled while the Acceptable Ads filter list was already enabled."
   },
   "content_blocking_acceptable_ads_disbled_message":{
-    "message":"We hebben Safari Content Blocking uitgeschakeld omdat je opteerde om niet-opdringerige advertenties toe te staan. Je kan slechts 1 van deze 2 opties tegelijk selecteren. (<a>Waarom?<\/a>)",
+    "message":"We hebben Safari materiaalblokkering uitgeschakeld omdat je er voor koos om niet-opdringerige advertenties toe te staan. Je kunt slechts 1 van deze 2 opties tegelijk selecteren. (<a>Waarom?<\/a>)",
     "description":"Warning shown when the Acceptable Ads filter list is enabled while Safari Content Blocking was already enabled."
   },
   "adreport_laststep":{
@@ -1611,6 +1619,10 @@
     "message":"Je bent vergeten een schermafbeelding toe te voegen! We kunnen je niet helpen zonder dat we de advertentie(s) zien die je aan ons wilt rapporteren.",
     "description":"Error message shown when the user doesn't attach a screenshot to an ad report."
   },
+  "adreport_response_success":{
+    "message":"Klaar! We zullen zo snel mogelijk contact met je opnemen. Intussen kan je kijken of je al een e-mail van AdBlock hebt ontvangen. Daarin vind je een link naar jouw hulpvraag op onze ondersteuningswebsite, samen met een aantal zelfhulp suggesties voor als we niet direct kunnen reageren.",
+    "description":"Shown when a ticket has been sumbitted to AdBlock's support site successfully."
+  },
   "adreport_response_invalid_file":{
     "message":"Dat is geen afbeeldingsbestand. Upload aub een .png, .gif of .jpg bestand.",
     "description":"Error message shown when the user uploads an invalid file type."
@@ -1646,6 +1658,10 @@
   "custom_filters_migration_error_message_part1":{
     "message":"Aantal fouten in de gepersonaliseerde filters: ",
     "description":"Part one of a message shown to users on the 'Customize' tab after invalid custom filters have been migrated"
+  },
+  "custom_filters_migration_error_message_part2":{
+    "message":"De volgende bericht(en) werden gegenereerd tijdens de migratie van de aangepaste filters (negeer de regelnummers): ",
+    "description":"Part two of a message shown to users on the 'Customize' tab after invalid custom filters have been migrated"
   },
   "custom_filters_migration_error_message_part3":{
     "message":"Originele invoer: ",
