--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -395,6 +395,10 @@
     "message":"Список Предупреждений об удалении AdBlock (удаляет предупреждения об использовании блокировщика рекламы)",
     "description":"A filter list. \"Adblock\" is written with a lowercase B in this string as it refers to ad blocking extensions in general, not just AdBlock specifically."
   },
+  "filteracceptable_ads":{
+    "message":"Приемлемая реклама",
+    "description":"A filter list"
+  },
   "filteradblock_custom":{
     "message":"Пользовательские фильтры AdBlock",
     "description":"A filter list"
