Updated with version: 3.9.3 changes

--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -1200,7 +1200,7 @@
     "description":"Link to AdBlock's privacy policy"
   },
   "translator_credit":{
-    "message":"Εύσημα για την μετάφραση δίνονται στους:",
+    "message":"Ευχαριστούμε για την βοήθεια στην μετάφραση τους:",
     "description":"Will be followed by a list of translator names (separate string)"
   },
   "tabsupport":{
