--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,16 @@
 
 UNRELEASED:
 
+3.9.3:
+- Fixed a bug in user surveys.  (#225)
+
+3.9.2:
+- Re-added code to enable user surveys.  (#224)
+- Updated Translations.
+
+3.9.1:
+- Updated 'bandaids' processing to help block ads on certain web sites. (#217)
+
 3.9.0:
 - Updated translations.
 - Updated to ABP Core 1.12.4 (#192)
