Updated with version: 3.14.0 changes

--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -260,7 +260,7 @@
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "datacollectionoption":{
-    "message":"Позволи анонимно събиране на данни за ползваните филтри в AdBlock",
+    "message":"Позволи анонимно събиране от AdBlock на данни за ползваните филтри и сведения за блокираното от тях съдържание",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "updatedrightnow":{
