--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -260,7 +260,7 @@
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "datacollectionoption":{
-    "message":"Allow AdBlock to collect anonymous filter list usage and data",
+    "message":"Allow AdBlock to collect anonymous filter list usage data, and information about content blocked by filter lists",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "updatedrightnow":{
