--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -260,7 +260,7 @@
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "datacollectionoption":{
-    "message":"Autoriser AdBlock à recueillir des données anonymes sur l'utilisation des listes de filtres",
+    "message":"Autoriser AdBlock à recueillir des données anonymes sur l'utilisation des listes de filtres, et des informations sur le contenu bloqué par celles-ci",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "updatedrightnow":{
