--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -260,7 +260,7 @@
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "datacollectionoption":{
-    "message":"Разрешить AdBlock анонимно сбирать использование списка фильтров и данные",
+    "message":"Разрешить AdBlock сбор анонимных данных об использовании списка фильтров и информации о контенте заблокированном списком фильтров",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "updatedrightnow":{
