--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -260,7 +260,7 @@
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "datacollectionoption":{
-    "message":"Cho phép AdBlock thu thập dữ liệu và cách sử dụng danh sách bộ lọc ẩn danh",
+    "message":"Cho phép AdBlock thu thập dữ liệu ẩn danh lưu lượng sử dụng của bộ lọc, và thông tin về nội dung bị chặn bởi các bộ lọc",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "updatedrightnow":{
