--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -260,7 +260,7 @@
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "datacollectionoption":{
-    "message":"允许AdBlock收集匿名的过滤列表使用情况及其他使用数据",
+    "message":"允许AdBlock收集匿名的过滤列表使用数据，以及被过滤列表屏蔽内容的有关信息",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "updatedrightnow":{
